# mysite

./: build.sh  db.sqlite3  pyproject.toml
mysite/: settings.py  urls.py
render/: views.py
render/templates/render/: index.html
