[tool.poetry]
name = "mysite"
version = "0.1.0"
description = ""
authors = ["WAYNE_SEA <103229094+zz39@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
