[tool.poetry]
name = "mysite"
version = "0.1.0"
description = ""
authors = ["WAYNE_SEA <103229094+zz39@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.3"
whitenoise = {extras = ["brotli"], version = "^6.2.0"}
dj-database-url = "^1.0.0"
psycopg2-binary = "^2.9.5"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
